# mars-mechanica

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
src/components/: assets.rs  camera.rs  discord.rs  entity.rs  mod.rs  splash.rs  terrain.rs  ui.rs
src/plugins/: asset_preloader.rs  camera.rs  debug_text.rs  debug_ui.rs  discord.rs  entity.rs  entity_plugin.rs  game.rs  interaction.rs  mod.rs  robot.rs  splash.rs  terrain.rs  terrain_plugin.rs  ui.rs
src/systems/: camera.rs  debug_text.rs  interaction.rs  mod.rs  world_generator.rs
