[package]
name = "mars-mechanica"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0-rc.1"
bevy_sprite = "0.16.0-rc.1"
noise = "0.9.0"
rand = "0.9.0"

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
