[package]
name = "mars-mechanica"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_sprite = "0.16.0-rc.1"
noise = "0.9.0"
rand = "0.9.0"

[dependencies.bevy]
version = "0.16.0-rc.1"
default-features = false
features = [
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
    "png",
    "vorbis",
    "wav"
]

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
