[package]
name = "mars-mechanica"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_sprite = "0.16.0-rc.2"
crossbeam-channel = "0.5.15"
discord-rich-presence = "0.2.5"
image = "0.25.6"
noise = "0.9.0"
parking_lot = "0.12.3"
rand = "0.9.0"
winit = "0.30.9"

[dependencies.bevy]
version = "0.16.0-rc.2"
default-features = false
features = [
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
    "png",
    "vorbis",
    "wav"
]

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
